[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/main_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/mainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/circle_empty.png" type="Texture" id=3]
[ext_resource path="res://scripts/ChooseUpgrade.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0117647, 0.866667, 0, 0.823529 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.423529, 0.423529, 0.823529 )

[node name="ChooseReward" type="CanvasLayer"]
layer = 3
script = ExtResource( 4 )

[node name="ChooseUpgrade" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -64.0
margin_bottom = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ChooseUpgrade"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -112.0
margin_right = -20.0
margin_bottom = -12.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0.392157, 0.392157, 0.392157, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChooseUpgrade"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -80.0
margin_right = 224.0
margin_bottom = -48.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "CHOOSE UPGRADE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseUpgrade"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select1" type="Button" parent="ChooseUpgrade/HBoxContainer"]
margin_right = 566.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "placeholder 1"

[node name="TextureRect" type="TextureRect" parent="ChooseUpgrade/HBoxContainer"]
margin_left = 570.0
margin_right = 670.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select2" type="Button" parent="ChooseUpgrade/HBoxContainer"]
margin_left = 674.0
margin_right = 1240.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "placeholder 2"

[connection signal="button_down" from="ChooseUpgrade/HBoxContainer/select1" to="." method="_on_select1_button_down"]
[connection signal="button_down" from="ChooseUpgrade/HBoxContainer/select2" to="." method="_on_select2_button_down"]
